# sumz-demand-analysis

./: LICENSE  Makefile  README.md  pyproject.toml
data/final/: test.csv  validation.csv
data/processed/: demand_products_test.csv
notebooks/: eda.ipynb  modeling.ipynb
