[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "sumz-demand"
version = "0.1.0"
description = ""
authors = ["dewith"]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^3.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
